<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_weight="4"
        android:orientation="vertical" >

        <View
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_exchange_selected" >
        </View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/account_info_margin_left"
            android:layout_marginRight="@dimen/account_info_margin_right"
            android:gravity="center"
            android:text="@string/account_info"
            android:textColor="@color/account_info_color"
            android:textSize="@dimen/account_info_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/account_margin"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/exist_account"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/exist_account"
            android:gravity="center"
            android:text="@string/has_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/no_account"
            android:gravity="center"
            android:text="@string/no_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4" />
    </LinearLayout>

</LinearLayout>